<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@android:color/transparent"
    android:orientation="vertical"
    android:theme="@style/Theme.Finanso.NoActionBar">

    <TextView
        android:id="@+id/kategoriaOpisText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/dodaj_kategorie"
        android:textAlignment="center"
        android:textColor="@color/grey"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/NazwaPopupKategorie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="60dp"
        android:autofillHints=""
        android:gravity="center_horizontal"
        android:hint="@string/nazwa"
        android:inputType="text"
        android:maxLength="30"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/OpisPopupKategorie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:autofillHints=""
        android:gravity="center_horizontal"
        android:hint="@string/opis"
        android:inputType="text"
        android:maxLength="50"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/NazwaPopupKategorie" />

    <ImageButton
        android:id="@+id/kolorKategorieButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:background="@color/BlueLight"
        android:contentDescription="@string/color"
        android:paddingBottom="-20dp"
        android:src="@drawable/color_picker_icon"
        app:layout_constraintTop_toBottomOf="@id/OpisPopupKategorie"
        app:tint="@color/black" />


    <!--<EditText
        android:id="@+id/E1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:inputType="text"
        android:hint="Kategoria"
        android:textSize="20sp"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@id/timeE"
        />
-->

    <Button
        android:id="@+id/dodajButtonKategorie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/BlueDarker"
        android:paddingVertical="15dp"
        android:text="@string/dodaj"
        android:textColor="@color/white"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/kolorKategorieButton" />

</androidx.constraintlayout.widget.ConstraintLayout>